# device-activity-telegram-bot

./: .gitignore  .python-version  .spec.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  halt.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-linux.txt  requirements-windows.txt  requirements.txt  send.py  send_message.py  setup.py
.claude/: settings.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  dependabot-auto-merge.yml  pr-checks.yml
src/: __init__.py  config.py  halt.py  send.py  telegram_client.py
tests/: conftest.py  test_e2e.py  test_halt.py  test_send.py
